--- a/src/App.module.css
+++ b/src/App.module.css
@@ -62,17 +62,18 @@
 .answer, .nextQuestion {
   all: unset;
   box-sizing: border-box;
+  white-space: pre-wrap;
   cursor: pointer;
   background-color: #102C57;
   color: #FEFAF6;
   display: flex;
   width: 350px;
   align-items: center;
-  padding-left: 12px;
+  padding: 5px 0px 5px 12px;
   gap: 12px;
 }
 .answer :first-child {
-  width: 50px;
+  width: 20px;
   text-align: center;
   font-size: 24px;
 }
