feat: better "number of questions" color

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -20,6 +20,7 @@
 }
 .numberOfQuestions {
   display: flex;
+  color: #102C57;
   justify-content: center;
   align-items: center;
   flex-direction: column;
